# itf-ctf

./: .env  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
actix-backend/: Cargo.toml  Dockerfile.prod  init.sh  sqlx-data.json
actix-backend/migrations/: 20210124161408_init.sql
actix-backend/src/: api.rs  how.rs  main.rs  routes.rs  startup.rs
actix-backend/src/ctf/: models.rs  routes.rs
actix-backend/src/ctf/handlers/: flag.rs  score.rs  users.rs
actix-backend/src/ctf/models/: flag.rs  namebuilder.rs  score.rs  users.rs
db/: schema.sql
frontend/: .eslintrc.json  Dockerfile  config-overrides.js  dev.prod.sh  package.json  tsconfig.json
frontend/@types/: alltypes.d.ts
frontend/public/: index.html
frontend/src/: App.tsx  index.tsx
frontend/src/components/Admin/: Admin.tsx  AdminNavbar.tsx  EditFlag.tsx  NewFlag.tsx  RootAdmin.tsx  ScoreWithEmails.tsx
frontend/src/components/Adout/: About.tsx  Event.tsx
frontend/src/components/Base/: Base.module.scss  Footer.tsx  Header.tsx  Main.tsx  Navbar.tsx
frontend/src/components/CTF/: CTF.module.scss  CTF.tsx  Flag.tsx
frontend/src/components/Scoreboard/: Scoreboard.tsx
frontend/src/utils/: Requester.ts  _base.scss  types.ts
nginx/: nginx.conf
static/: text.txt
