[package]
name = "itf-days-api"
version = "0.1.0"
authors = ["Roberts Ivanovs <robertsivanovs1999@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "3.3"
actix-rt = "1.1.1"
sqlx = { version = "0.4.2", features = [
    "runtime-tokio-rustls",
    "mysql",
    "macros",
    "chrono",
    "migrate",
    "json",
    "offline",
] }
serde = "1.0"
serde_json = "1.0"
dotenv = "0.15.0"
env_logger = "0.8.2"
log = "0.4.13"
anyhow = "1.0"
async-trait = "0.1.42"
thiserror = "1.0"
serde-aux = "2.1.1"
lazy_static = "1.4.0"
regex = "1.4.3"
chrono = {version = "0.4", features = ["serde"]}
mime = "0.3.16"
actix-form-data = "0.5.0"
actix-multipart = "0.3.0"
futures = "0.3.12"
base64 = "0.13.0"

[dev-dependencies]
